fix(orb-ui): align itens agent key (#2606)

--- a/ui/src/app/pages/fleet/agents/key/agent.key.component.scss
+++ b/ui/src/app/pages/fleet/agents/key/agent.key.component.scss
@@ -59,6 +59,7 @@ nb-card {
       code {
         color: #ffffff;
         line-height: 2.5 !important;
+        font-size: 16px !important;
       }
     }
   }
